# cloudobs

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  api_docs.md  base-image.dockerfile  changelog.md  common_service.py  config.py  docker-compose.yml  gdrive_sync.py  google_sheets.py  instance_service.py  ip.list.example  minions_service.py  obs.py  pyproject.toml  requirements.txt  scheduler.py  scripts.py  server.py  source_watcher.py  testing.py  util.py  web_socket_docs.md
.github/workflows/: base-image.yml  dev.yml  pre-commit.yml  prod.yml
.github/workflows_onhold/: pre-commit.yml
deployment/: __init__.py  spawner.py
googleapi/: __init__.py  google_sheets.py  sheets.py
media/: obs.py  scheduler.py  server.py
minions/: chief.py  minion.py
models/: __init__.py  logging.py  models.py
obs/: __init__.py  obs.py  scheduler.py  server.py
server/: __init__.py  jarvice.py  minion.py  minions.py  server_state.py  skipper.py
state/: server_state.py
testing/: client.py  server.py
util/: __init__.py  config.py  util.py  vmix.py
web/: routes.py
