[tool.poetry]
name = "cloudobs"
version = "0.1.0"
description = ""
authors = [
    "amukhsimov <aka.mukhsimov@gmail.com>",
    "Illia Ananich <illia.ananich@gmail.com>",
]


[tool.poetry.dependencies]
python = "^3.8"
# main dependencies
Flask = "~=1.1.2"
obs-websocket-py = {git = "https://github.com/amukhsimov/obs-websocket-py.git", rev = "master"}
aiohttp = "^3.8.1"
# Google API
google-api-python-client = "^2.44.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
# Utils
python-dotenv = "0.19.2"
sentry-sdk = {extras = ["flask"], version = "^1.5.10"}
Jinja2 = "3.0.0"
itsdangerous = "2.0.1"
Werkzeug = "2.0.0"
asgiref = "~=3.4.1"
pyOpenSSL = "19.1.0"
pygsheets = "2.0.5"
pandas = "1.5.3"
pydantic = "1.10.2"
aiosignal = "^1.3.1"
async-timeout = "^4.0.2"
attrs = "^22.1.0"
beautifulsoup4 = "^4.11.1"
blinker = "^1.5"
cachetools = "^5.2.0"
certifi = "^2022.12.7"
cffi = "^1.15.1"
click = "^8.1.3"
colorama = "^0.4.6"
cryptography = "^38.0.4"
filelock = "^3.8.2"
python-socketio = "^5.7.2"
python-engineio = "^4.3.4"
flask-socketio = "^5.3.2"
socketio-client = "^0.7.2"
dnspython = "^2.2.1"
eventlet = "^0.33.2"
frozenlist = "^1.3.3"
google-api-core = "^2.11.0"
google-auth = "^2.15.0"
googleapis-common-protos = "^1.57.0"
httplib2 = "^0.21.0"
idna = "^3.4"
markupsafe = "^2.1.1"
multidict = "^6.0.3"
numpy = "^1.23.5"
oauthlib = "^3.2.2"
protobuf = "^4.21.11"
pyasn1-modules = "^0.2.8"
pyasn1 = "^0.4.8"
pycparser = "^2.21"
pyparsing = "^3.0.9"
pysocks = "^1.7.1"
python-dateutil = "^2.8.2"
pytz = "^2022.6"
requests-oauthlib = "^1.3.1"
requests = "^2.28.1"
rsa = "^4.9"
six = "^1.16.0"
soupsieve = "^2.3.2.post1"
tqdm = "^4.64.1"
uritemplate = "^4.1.1"
urllib3 = "^1.26.13"
websocket-client = "^1.4.2"
yarl = "^1.8.2"
oauth2client = "^4.1.3"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''